--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body class="lato">
     <header class=" mx-5 lg:container lg:mx-auto">
         <!-- navbar -->
-        <div class="navbar lg:bg-[#F85559] rounded-full flex justify-between lg:px-12 py-3 static my-5">
+        <div class="navbar lg:bg-[#F85559] rounded-full flex justify-between lg:px-12 py-3 static lg:my-5">
             <div class="hidden lg:flex">
                 <ul class="text-white flex font-medium gap-7">
                     <li><a href=""></a>Home</li>
@@ -64,7 +64,7 @@
             <div class="carousel w-full py-10">
                 <div id="slide1" class="carousel-item relative w-full">
                     <img src="images/banner1.png" class="w-full" />
-                    <div class="absolute top-[18%] left-[25%] flex flex-col justify-center items-center  space-y-1 lg:space-y-4">
+                    <div class="absolute top-[18%] left-[25%] flex flex-col justify-center items-center  space-y-0 lg:space-y-4">
                         <h3 class="text-white text-2xl lg:text-7xl lg:font-extrabold text-center">Exotic tastes at your <br>doorstep
                         </h3>
                         <p class=" text-[14px] lg:text-[20px] font-normal lg:font-medium text-white">We supply highly quality organic products</p>
@@ -138,7 +138,7 @@
                 </div>
                 <div id="slide3" class="carousel-item relative w-full">
                     <img src="images/banner3.png" class="w-full" />
-                    <div class="absolute top-[18%] left-[25%] flex flex-col justify-center items-center space-y-1 lg:space-y-4">
+                    <div class="absolute top-[18%] left-[25%] flex flex-col justify-center items-center space-y-0 lg:space-y-4">
                         <h3 class="text-white text-2xl lg:text-7xl lg:font-extrabold text-center">Exotic tastes at your <br>doorstep
                         </h3>
                         <p class="text-[14px] lg:text-[20px] font-normal lg:font-medium text-white">We supply highly quality organic products</p>
@@ -175,7 +175,7 @@
                 </div>
                     <div id="slide4" class="carousel-item relative w-full">
                         <img src="images/banner4.png" class="w-full" />
-                        <div class="absolute top-[18%] left-[25%] flex flex-col justify-center items-center space-y-1 lg:space-y-4" >
+                        <div class="absolute top-[18%] left-[25%] flex flex-col justify-center items-center space-y-0 lg:space-y-4" >
                             <h3 class="text-white text-2xl lg:text-7xl lg:font-extrabold text-center">Exotic tastes at your <br>doorstep
                             </h3>
                             <p class="text-[14px] lg:text-[20px] font-normal lg:font-medium text-white">We supply highly quality organic products</p>
