--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
                     </div>
                 </div>
             </div>
-            <div class="flex flex-col lg:flex-row gap-5 justify-between">
-                <div class="card bg-base-100 shadow-xl w-96">
+            <div class="grid lg:grid-cols-4 md:grid-cols-2  grid-cols-1 gap-5 justify-between">
+                <div class="card bg-base-100 shadow-xl lg:w-[310px]">
                     <figure class="px-10 pt-10">
                         <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
                     </figure>
@@ -265,7 +265,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card bg-base-100 shadow-xl w-96">
+                <div class="card bg-base-100 shadow-xl lg:w-[310px]">
                     <figure class="px-10 pt-10">
                         <img src="images/fruit7.png" alt="Shoes" class="rounded-xl" />
                     </figure>
@@ -340,7 +340,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card bg-base-100 shadow-xl w-96">
+                <div class="card bg-base-100 shadow-xl lg:w-[310px]">
                     <figure class="px-10 pt-10">
                         <img src="images/fruit8.png" alt="Shoes" class="rounded-xl" />
                     </figure>
@@ -415,7 +415,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card bg-base-100 shadow-xl w-96">
+                <div class="card bg-base-100 shadow-xl lg:w-[310px]">
                     <figure class="px-10 pt-10">
                         <img src="images/fruit9.png" alt="Shoes" class="rounded-xl" />
                     </figure>
