--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                                 has roots in a piece of classical<br> Latin literature from 45 BC, making it over 2000
                                 years old.</p>
                         </div>
-                        <div class="flex flex-col lg:flex-row justify-around w-[100%]">
+                        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 justify-around w-[100%]">
                             <div class="mt-10 text-center flex flex-col items-center gap-3">
                                 <div class="avatar">
                                     <div class="w-24 rounded-full">
@@ -579,7 +579,7 @@
             </div>
             <div class="flex flex-col lg:flex-row justify-between gap-12">
                 <div class="space-y-5">
-                    <div class="lg:hidden">
+                    <div class="lg:hidden md:flex md:justify-center md:items-center">
                         <img src="images/whychoose1.png" alt="" class="">
                     </div>
                     <div class="flex flex-col lg:flex-row items-center text-center lg:text-start lg:items-start gap-6">
