--- a/index.html
+++ b/index.html
@@ -107,13 +107,14 @@
                     </div>
                 </div>
                     <div id="slide4" class="carousel-item relative w-full">
-                        <img src="images/banner4.png" class="w-full" />
-                        <div class="absolute top-[18%] left-[25%] flex flex-col justify-center items-center md:space-y-2 lg:space-y-4" >
-                            <h3 class="text-white text-2xl md:text-5xl lg:text-7xl lg:font-extrabold text-center">Exotic tastes at your <br>doorstep
-                            </h3>
-                            <p class="text-[14px] lg:text-[20px] font-normal lg:font-medium text-white">We supply highly quality organic products</p>
-                            <button class="bg-primary-color px-2 lg:px-6 py-1 lg:py-4 rounded-lg lg:w-36 text-white"> Shop now </button>
-                        </div>
+                        <div class="">
+                            <img src="images/banner3.png" class="w-full" />
+                            <div class="absolute top-[18%] left-[25%] flex flex-col justify-center items-center md:space-y-2 lg:space-y-4">
+                                <h3 class="text-white text-2xl md:text-5xl lg:text-7xl lg:font-extrabold text-center">Exotic tastes at your <br>doorstep
+                                </h3>
+                                <p class="text-[14px] lg:text-[20px] font-normal lg:font-medium text-white">We supply highly quality organic products</p>
+                                <button class="bg-primary-color px-2 lg:px-6 py-1 lg:py-4 rounded-lg lg:w-36 text-white"> Shop now </button>
+                            </div>
                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                             <a href="#slide3" class="btn btn-circle text-white bg-slate-800 hover:bg-slate-600">❮</a>
                             <a href="#slide1" class="btn btn-circle text-white bg-slate-800 hover:bg-slate-600">❯</a>
@@ -577,8 +578,8 @@
                 <p class="font-medium text-[#12121299]">Contrary to popular belief, is not simply random text. It has
                     roots in a piece of classical<br> Latin literature from 45 BC, making it over 2000 years old.</p>
             </div>
-            <div class="flex flex-col lg:flex-row justify-between gap-12">
-                <div class="space-y-5">
+            <div class="grid lg:grid-cols-3 grid-cols-1 justify-between gap-12">
+                <div class="space-y-6">
                     <div class="lg:hidden md:flex md:justify-center md:items-center">
                         <img src="images/whychoose1.png" alt="" class="">
                     </div>
@@ -619,7 +620,7 @@
                 <div class="hidden lg:block">
                     <img src="images/whychoose1.png" alt="" class="">
                 </div>
-                <div class="space-y-5">
+                <div class="space-y-7">
                     <div class="flex flex-col justify-center items-center lg:flex-row-reverse gap-6">
                         <div
                             class=" flex justify-center items-center bg-[#1212121a] min-w-[50px] max-w-[50px] h-[50px] rounded-full">
